syntax = "proto3";

package blog;

option go_package = "blogpb";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogRequest {
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1; // Will have a blog ID
}

service BlogService {
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {};
}